Add scss files for huge screens and print media

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href="dist/main.css" rel="stylesheet">
-	<link media="screen and (max-width: 30em)" href="dist/main-small.css">
-	<link media="screen and (min-width: 30em) and (max-width: 60em)" href="dist/main-medium.css"
-	      rel="stylesheet">
-	<link media="screen and (min-width: 60em)" href="dist/main-large.css" rel="stylesheet">
+	<link href="dist/main.css"        rel="stylesheet">
+	<link href="dist/main-small.css"  rel="stylesheet" media="(max-width: 30em)">
+	<link href="dist/main-medium.css" rel="stylesheet" media="(min-width: 30em) and (max-width: 60em)">
+	<link href="dist/main-large.css"  rel="stylesheet" media="(min-width: 60em) and (max-width: 90em)">
+	<link href="dist/main-huge.css"   rel="stylesheet" media="(min-width: 90em)">
+	<link href="dist/main-print.css"  rel="stylesheet" media="print" disabled>
     </head>
     <body>
 	<h1>
