--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href="dist/main.css"        rel="stylesheet">
+	<link href="dist/main-all.css"    rel="stylesheet">
 	<link href="dist/main-small.css"  rel="stylesheet" media="(max-width: 30em)">
 	<link href="dist/main-medium.css" rel="stylesheet" media="(min-width: 30em) and (max-width: 60em)">
 	<link href="dist/main-large.css"  rel="stylesheet" media="(min-width: 60em) and (max-width: 90em)">
 	<link href="dist/main-huge.css"   rel="stylesheet" media="(min-width: 90em)">
 	<link href="dist/main-print.css"  rel="stylesheet" media="print" disabled>
     </head>
-    <body>
-	<h1>
+    <body class="p3">
+	<h1 class="mt0">
 	    My CSS library demo
 	</h1>
 	<h2>
@@ -24,58 +24,58 @@
 	    Padding all
 	</h3>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>p0</code>
 	</h4>
-	<div class="p0" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib white bg-black p0">
 	    Element with class p0
 	</div>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>p1</code>
 	</h4>
-	<div class="p1" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib white bg-black p1">
 	    Element with class p1
 	</div>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>p2</code>
 	</h4>
-	<div class="p2" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib white bg-black p2">
 	    Element with class p2
 	</div>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>p3</code>
 	</h4>
-	<div class="p3" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib white bg-black p3">
 	    Element with class p3
 	</div>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>p4</code>
 	</h4>
-	<div class="p4" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib white bg-black p4">
 	    Element with class p4
 	</div>
-	<h4>
+	<h4 class="mb1">
 	    <code>p5</code>
 	</h4>
-	<div class="p5" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib white bg-black p5">
 	    Element with class p5
 	</div>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>p6</code>
 	</h4>
-	<div class="p6" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib white bg-black p6">
 	    Element with class p6
 	</div>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>p7</code>
 	</h4>
-	<div class="p7" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib white bg-black p7">
 	    Element with class p7
 	</div>
 
@@ -86,7 +86,7 @@
 	    Margin all
 	</h3>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>m0</code>
 	</h4>
 	<div style="display: inline-block; border: 2px dotted #000;">
@@ -95,7 +95,7 @@
 	    </div>
 	</div>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>m1</code>
 	</h4>
 	<div style="display: inline-block; border: 2px dotted #000;">
@@ -104,7 +104,7 @@
 	    </div>
 	</div>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>m2</code>
 	</h4>
 	<div style="display: inline-block; border: 2px dotted #000;">
@@ -113,7 +113,7 @@
 	    </div>
 	</div>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>m3</code>
 	</h4>
 	<div style="display: inline-block; border: 2px dotted #000;">
@@ -122,7 +122,7 @@
 	    </div>
 	</div>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>m4</code>
 	</h4>
 	<div style="display: inline-block; border: 2px dotted #000;">
@@ -131,7 +131,7 @@
 	    </div>
 	</div>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>m5</code>
 	</h4>
 	<div style="display: inline-block; border: 2px dotted #000;">
@@ -140,7 +140,7 @@
 	    </div>
 	</div>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>m6</code>
 	</h4>
 	<div style="display: inline-block; border: 2px dotted #000;">
@@ -149,7 +149,7 @@
 	    </div>
 	</div>
 
-	<h4>
+	<h4 class="mb1">
 	    <code>m7</code>
 	</h4>
 	<div style="display: inline-block; border: 2px dotted #000;">
