Update demo page. Refactor margin examples

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 	<h4 class="mb1">
 	    <code>m0</code>
 	</h4>
-	<div style="display: inline-block; border: 2px dotted #000;">
-	    <div class="m0" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib ba">
+	    <div class="dib white bg-black m0">
 		Element with class m0
 	    </div>
 	</div>
@@ -98,8 +98,8 @@
 	<h4 class="mb1">
 	    <code>m1</code>
 	</h4>
-	<div style="display: inline-block; border: 2px dotted #000;">
-	    <div class="m1" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib ba">
+	    <div class="dib white bg-black m1">
 		Element with class m1
 	    </div>
 	</div>
@@ -107,8 +107,8 @@
 	<h4 class="mb1">
 	    <code>m2</code>
 	</h4>
-	<div style="display: inline-block; border: 2px dotted #000;">
-	    <div class="m2" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib ba">
+	    <div class="dib white bg-black m2">
 		Element with class m2
 	    </div>
 	</div>
@@ -116,8 +116,8 @@
 	<h4 class="mb1">
 	    <code>m3</code>
 	</h4>
-	<div style="display: inline-block; border: 2px dotted #000;">
-	    <div class="m3" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib ba">
+	    <div class="dib white bg-black m3">
 		Element with class m3
 	    </div>
 	</div>
@@ -125,8 +125,8 @@
 	<h4 class="mb1">
 	    <code>m4</code>
 	</h4>
-	<div style="display: inline-block; border: 2px dotted #000;">
-	    <div class="m4" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib ba">
+	    <div class="dib white bg-black m4">
 		Element with class m4
 	    </div>
 	</div>
@@ -134,8 +134,8 @@
 	<h4 class="mb1">
 	    <code>m5</code>
 	</h4>
-	<div style="display: inline-block; border: 2px dotted #000;">
-	    <div class="m5" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib ba">
+	    <div class="dib white bg-black m5">
 		Element with class m5
 	    </div>
 	</div>
@@ -143,8 +143,8 @@
 	<h4 class="mb1">
 	    <code>m6</code>
 	</h4>
-	<div style="display: inline-block; border: 2px dotted #000;">
-	    <div class="m6" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib ba">
+	    <div class="dib white bg-black m6">
 		Element with class m6
 	    </div>
 	</div>
@@ -152,8 +152,8 @@
 	<h4 class="mb1">
 	    <code>m7</code>
 	</h4>
-	<div style="display: inline-block; border: 2px dotted #000;">
-	    <div class="m7" style="color: #fff; background: #000; display: inline-block;">
+	<div class="dib ba">
+	    <div class="dib white bg-black m7">
 		Element with class m7
 	    </div>
 	</div>
