Add headers to my-css-lib demo

--- a/index.html
+++ b/index.html
@@ -157,5 +157,20 @@
 		Element with class m7
 	    </div>
 	</div>
+
+	<h2>
+	    Headers
+	</h2>
+	<div class="dib ba p3">
+	    <div class="f-headline b">headline</div>
+	    <div class="f-subheadline b">subheadline</div>
+            <h1  class="mv0">h1 header</h1>
+            <h2  class="mv0">h2 header</h2>
+            <h3  class="mv0">h3 header</h3>
+            <h4  class="mv0">h4 header</h4>
+            <h5  class="mv0">h5 header</h5>
+            <h6  class="mv0">h6 header</h6>
+            <p   class="mv0">regular text</p>
+	</div>
     </body>
 </html>
