Update docs layout

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href="dist/c4s-all.css"    rel="stylesheet">
-	<link href="dist/c4s-small.css"  rel="stylesheet" media="(max-width: 30em)">
-	<link href="dist/c4s-medium.css" rel="stylesheet" media="(min-width: 30em) and (max-width: 60em)">
-	<link href="dist/c4s-large.css"  rel="stylesheet" media="(min-width: 60em) and (max-width: 90em)">
-	<link href="dist/c4s-huge.css"   rel="stylesheet" media="(min-width: 90em)">
-	<link href="dist/c4s-print.css"  rel="stylesheet" media="print" disabled>
+	<link href="/dist/c4s-all.css"    rel="stylesheet">
+	<link href="/dist/c4s-small.css"  rel="stylesheet" media="(max-width: 30em)">
+	<link href="/dist/c4s-medium.css" rel="stylesheet" media="(min-width: 30em) and (max-width: 60em)">
+	<link href="/dist/c4s-large.css"  rel="stylesheet" media="(min-width: 60em) and (max-width: 90em)">
+	<link href="/dist/c4s-huge.css"   rel="stylesheet" media="(min-width: 90em)">
+	<link href="/dist/c4s-print.css"  rel="stylesheet" media="print" disabled>
     </head>
     <body class="p3">
 	<h1 class="mt0">
