--- a/index.html
+++ b/index.html
@@ -3095,7 +3095,7 @@
     <dl class="mt4">
       <dt class="code">.code</dt>
       <dd class="code">
-        <div>font-family: Consolas, monaco, monospace</div>
+        <div>font-family: consolas, monaco, monospace</div>
       </dd>
     </dl>
     <div>
@@ -4811,7 +4811,7 @@
     <dl class="mt4">
       <dt class="code">.code</dt>
       <dd class="code">
-        <div>font-family: Consolas, monaco, monospace</div>
+        <div>font-family: consolas, monaco, monospace</div>
       </dd>
     </dl>
     <div></div>
@@ -4921,7 +4921,7 @@
     <dl class="mt4">
       <dt class="code">code</dt>
       <dd class="code">
-        <div>font-family: Consolas, monaco, monospace</div>
+        <div>font-family: consolas, monaco, monospace</div>
       </dd>
     </dl>
     <div></div>
